# Unified_Method_for_Solving_General_Polynomial_Equations

./: CMakeLists.txt  README.md  main.cpp
excerpt/inc/: excerpt.h
excerpt/src/: excerpt.cpp
